# strat-creator

./: README.md  mkdocs.yml  pyproject.toml
.claude/skills/strategy-create/: SKILL.md
.claude/skills/strategy-prototype/: SKILL.md
.github/workflows/: docs.yml
config/: pipeline-settings.yaml
config/engineering35-batches/: generate_batches.py
docs/: getting-started.md  glossary.md  human-review-guide.md  index.md
docs/javascripts/: diagram-zoom.js
docs/pipeline-stages/: human-review-signoff.md  rfe-assessment.md  rfe-creation.md  rfe-discovery-filtering.md  rfe-submission.md  strategy-creation.md  strategy-refinement.md  strategy-review.md
docs/reference/: architecture-context.md  dashboard-guide.md  jira-labels-fields.md  scoring-rubric.md  skill-reference.md  system-architecture.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/workflow-guide/: engineering-managers.md  product-managers.md  staff-engineers.md
scripts/: artifact_utils.py  bootstrap-assess-strat.sh  bootstrap-prototype-creator.sh  clone_issue.py  extract-pipeline-data.py  fetch_issue.py  generate-dashboard.py  generate-report.py  jira_utils.py  lock_issues.py  pull_strategy.py  push_strategy.py  strategy_history.py  validate_strat_testability.py
tests/: conftest.py  test_clone_issue.py  test_create_issue.py  test_find_strat_for_rfe.py  test_jql_builder.py  test_lock_issues.py  test_pipeline_e2e.py  test_pull_strategy.py  test_push_strategy.py  test_push_strategy_integration.py  test_search_and_filter.py  test_strategy_history.py  test_validate_strat_testability.py
(+10 files in other folders)
