[project]
name = "strat-creator"
version = "0.1.0"
description = "Skills for creating, refining, and reviewing strategy documents from approved RFEs"
requires-python = ">=3.11"
dependencies = [
    "certifi",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "jira-emulator @ git+https://github.com/jctanner/jira-emulator.git",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
